passing data to erb from partial for mobile row header

--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -1,25 +1,8 @@
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2017</span>
-            <span class="quarter">Q4</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2017',
+  quarter: 'Q4',
+  desc_html: '<span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.'
+} %>
 
 <div class="row">
   <div class="col-12 bg-line first pt-5">
@@ -86,28 +69,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2018</span>
-            <span class="quarter">Q1</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">1600 Branded Token economies created.</span> 18.8 million token transfers executed.
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2018',
+  quarter: 'Q1',
+  desc_html: '<span class="text-bold">1600 Branded Token economies created.</span> 18.8 million token transfers executed.'
+} %>
 
 <div class="row">
   <div class="col-12">
@@ -141,28 +107,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2018</span>
-            <span class="quarter">Q3</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. Publish framework for scaling token economies.
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2018',
+  quarter: 'Q3',
+  desc_html: '<span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. Publish framework for scaling token economies.'
+} %>
 
 <div class="row">
   <div class="col-6 bg-line first pt-5 d-flex">
@@ -185,28 +134,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2018</span>
-            <span class="quarter">Q4</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">Test integrations of OST on Mainnet with cash-out to OST.</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2018',
+  quarter: 'Q4',
+  desc_html: '<span class="text-bold">Test integrations of OST on Mainnet with cash-out to OST.</span>'
+} %>
 
 <div class="row">
   <div class="col-8 bg-line first pt-5 mx-auto">
@@ -232,28 +164,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2019</span>
-            <span class="quarter">Q1</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">OpenST & OST Mainnet. Branded Token economies on mainnet with cash-out to OST or ETH.</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2019',
+  quarter: 'Q1',
+  desc_html: '<span class="text-bold">OpenST & OST Mainnet. Branded Token economies on mainnet with cash-out to OST or ETH.</span>'
+} %>
 
 <div class="row">
   <div class="col-6 bg-line first pt-5 d-flex">
@@ -272,28 +187,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2019</span>
-            <span class="quarter">Q2</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">OST General Availability for mainstream businesses.</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2019',
+  quarter: 'Q2',
+  desc_html: '<span class="text-bold">OST General Availability for mainstream businesses.</span>'
+} %>
 
 <div class="row">
   <div class="col-8 bg-line first pt-5 mx-auto">
@@ -307,28 +205,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2019</span>
-            <span class="quarter">Q3</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2019',
+  quarter: 'Q3',
+  desc_html: '<span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.'
+} %>
 
 <div class="row">
   <div class="col-6 bg-line first pt-5 d-flex">
@@ -347,29 +228,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2019</span>
-            <span class="quarter">Q4</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">Enable anyone to run an OpenST BT-EX or BT-DEX.</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2019',
+  quarter: 'Q4',
+  desc_html: '<span class="text-bold">Enable anyone to run an OpenST BT-EX or BT-DEX.</span>'
+} %>
 <div class="row">
   <div class="col-8 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
@@ -382,29 +245,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2020</span>
-            <span class="quarter">Q2</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">Fully autonomous decentralized token economies.</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2020',
+  quarter: 'Q2',
+  desc_html: '<span class="text-bold">Fully autonomous decentralized token economies.</span>'
+} %>
 <div class="row">
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
@@ -414,29 +259,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2020</span>
-            <span class="quarter">Q4</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">Scale OST to machine-to-machine transactions.</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2020',
+  quarter: 'Q4',
+  desc_html: '<span class="text-bold">Scale OST to machine-to-machine transactions.</span>'
+} %>
 <div class="row">
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
@@ -446,29 +273,11 @@
   </div>
 </div>
 
-<div class="row quarters-year-row">
-  <div class="col-12 mt-5">
-    <div class="container-content">
-      <div class="row">
-        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
-          <svg class="milestone-logo">
-            <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-            </switch>
-          </svg>
-          <div>
-            <span class="year">2021</span>
-            <span class="quarter">Q2</span>
-          </div>
-        </div>
-        <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">Fully autonomous decentralized token economies on any major blockchain, at M2M-scale, with exchange liquidity.</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+  year: '2021',
+  quarter: 'Q2',
+  desc_html: '<span class="text-bold">Fully autonomous decentralized token economies on any major blockchain, at M2M-scale, with exchange liquidity.</span>'
+} %>
 <div class="row">
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
