mobile select dropdown

--- a/app/assets/stylesheets/web/ost/roadmap/Index.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Index.scss
@@ -345,6 +345,7 @@ body{
     position: relative;
     font-weight: 600;
     letter-spacing: 1px;
+    background-color: #f3f8f9;
     transition: .3s color ease-in-out;
     &:nth-child(2) {
       margin-top: 4.5em;
@@ -374,7 +375,7 @@ body{
     top: 0;
     width: 100%;
     transition: .5s color ease-in-out;
-    background-color: #f3f8f9;
+    background-color: #FFFFFF;
 
     &:nth-child(2) {
       margin-top: 0;
