--- a/app/assets/stylesheets/web/ost/roadmap/Index.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Index.scss
@@ -417,3 +417,10 @@ body{
   background-image: url('https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/2020-q1-bg@2x.png');
   background-repeat: no-repeat;
 }
+
+.quarters-year-header{
+  color: #35445b;
+  &:hover{
+    color: #35445b;
+  }
+}
