--- a/app/views/web/ost/roadmap/desktop/_2017-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2017-q4.erb
@@ -4,7 +4,8 @@
     <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
       year: '2017',
       quarter: 'Q4',
-      desc_html: '<span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.'
+      desc_html: '<span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.',
+      header_link: 'https://medium.com/ostdotcom/openst-protocol-and-platform-released-to-the-public-under-open-source-licenses-d4700d83ea7a'
     } %>
   </div>
 
@@ -15,54 +16,58 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
-            <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
-              <span class="roadmap-telegram-icon"></span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://twitter.com/OSTdotcom" target="_blank" title="OST - Twitter">
-              <span class="roadmap-twitter-icon"></span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://medium.com/ostdotcom" target="_blank" title="OST - Medium">
-              <span class="roadmap-medium-icon"></span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">
-              <span class="roadmap-linkedIn-icon"></span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">
-              <span class="roadmap-facebook-icon"></span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.youtube.com/ostdotcom" target="_blank" title="OST - Youtube">
+            <a href="https://www.youtube.com/watch?v=-SxJ8c1Xh_A" target="_blank" title="OST Roadmap - Youtube">
               <span class="roadmap-youtube-icon"></span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href=" https://github.com/OpenSTFoundation" target="_blank" title="OST - Github">
+            <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" target="_blank" title="OST Roadmap - Medium">
+              <span class="roadmap-medium-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v0.9.0" target="_blank" title="OST Roadmap - Github">
               <span class="roadmap-github-icon"></span>
             </a>
           </li>
         </ul>
+
+          <!--<li class="list-inline-item">-->
+            <!--<a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">-->
+              <!--<span class="roadmap-telegram-icon"></span>-->
+            <!--</a>-->
+          <!--</li>-->
+          <!--<li class="list-inline-item">-->
+            <!--<a href="https://twitter.com/OSTdotcom" target="_blank" title="OST - Twitter">-->
+              <!--<span class="roadmap-twitter-icon"></span>-->
+            <!--</a>-->
+          <!--</li>-->
+          <!--<li class="list-inline-item">-->
+            <!--<a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">-->
+              <!--<span class="roadmap-linkedIn-icon"></span>-->
+            <!--</a>-->
+          <!--</li>-->
+          <!--<li class="list-inline-item">-->
+            <!--<a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">-->
+              <!--<span class="roadmap-facebook-icon"></span>-->
+            <!--</a>-->
+          <!--</li>-->
 
         <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/openst-protocol-0.9.1@2x.png" class="img-fluid d-block my-3"/>
         <ul class="desc-lines">
           <li>0.9.0 Mint Branded Tokens</li>
           <li>0.9.1 Mainnet Developer Release</li>
         </ul>
-        <a href="" class="d-block more-desc" target="_blank">Read more</a>
+        <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line second py-5 d-flex align-items-center">
       <div class="container-content">
         <div class="text-bold letter-space">OST KIT R&D</div>
         <div class="status">Status: Complete</div>
+        <ul class="desc-lines">
+          <li>Research on dashboard and tools to setup and simulate OST-powered token economies.</li>
+        </ul>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
