--- a/app/views/web/ost/roadmap/desktop/_2018-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q3.erb
@@ -3,7 +3,8 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2018',
     quarter: 'Q3',
-    desc_html: '<span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. <br/>Publish framework for scaling token economies.'
+    desc_html: '<span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. <br/>Publish framework for scaling token economies.',
+    header_link: 'https://medium.com/ostdotcom/92-projects-successfully-complete-ost-alpha-iii-8-selected-as-best-of-alpha-iii-827d9f306d7c'
   } %>
 
   <div class="row bg-h-border position-relative">
@@ -13,6 +14,13 @@
           <div class="container-content p-15-10">
             <div class="text-bold">OpenST Protocol</div>
             <div class="status">Status: Complete</div>
+            <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+              <li class="list-inline-item">
+                <a href="https://github.com/OpenSTFoundation/mosaic-contracts" target="_blank" title="OST Roadmap - Github">
+                  <span class="roadmap-github-icon"></span>
+                </a>
+              </li>
+            </ul>
             <ul class="desc-lines">
               <li>0.9.3  Cross-chain token-messaging</li>
             </ul>
@@ -22,10 +30,21 @@
           <div class="container-content p-15-10">
             <div class="text-bold">OpenST Mosaic Paper</div>
             <div class="status">Status: Complete</div>
+            <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+              <li class="list-inline-item">
+                <a href="https://medium.com/ostdotcom/ost-contributes-openst-protocol-0-9-3-fully-decentralizing-the-openst-protocol-gateway-52719d9785b5" target="_blank" title="OST Roadmap - Medium">
+                  <span class="roadmap-medium-icon"></span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/OpenSTFoundation/mosaic.js" target="_blank" title="OST Roadmap - Github">
+                  <span class="roadmap-github-icon"></span>
+                </a>
+              </li>
+            </ul>
             <ul class="desc-lines">
               <li>Scalable PoS Blockchains Finalized on Ethereum</li>
             </ul>
-            <a href="" class="d-block more-desc" target="_blank">Read more</a>
           </div>
         </div>
       </div>
@@ -34,6 +53,13 @@
       <div class="container-content">
         <div class="text-bold">OST KIT Alpha 3</div>
         <div class="status">Status: Complete</div>
+        <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+          <li class="list-inline-item">
+            <a href="https://medium.com/ostdotcom/introducing-ost-ledger-balance-apis-to-integrate-branded-token-balances-and-transaction-histories-2420736070bb" target="_blank" title="OST Roadmap - Medium">
+              <span class="roadmap-medium-icon"></span>
+            </a>
+          </li>
+        </ul>
         <ul class="desc-lines">
           <li>Wallet-lite Ledger & Balance APIs</li>
         </ul>
