--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -20,14 +20,26 @@
 } %>
 
 <div class="row">
-  <div class="col-8 bg-line second pt-5 mx-auto">
+  <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content">
       <div class="text-bold">OST KIT Alpha 1</div>
       <div class="status">Status: Complete</div>
+      <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+        <li class="list-inline-item">
+          <a href="https://medium.com/ostdotcom/ost-launches-ost-kit-public-alpha-release-of-the-complete-blockchain-toolkit-for-business-211416488d2" target="_blank" title="OST Roadmap - Medium">
+            <span class="roadmap-medium-icon"></span>
+          </a>
+        </li>
+      </ul>
+      <div class="play-bg">
+        <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/ost-kit-alpha@2x.png" class="img-fluid d-block my-3"/>
+        <a href="" class="play-icon" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/f6N3uKMzasI"></a>
+      </div>
       <ul class="desc-lines">
         <li>Setup Economy</li>
         <li>Simulate Token Transfers</li>
       </ul>
+      <a href="https://dev.ost.com/docs/api_transfers_create.html" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
     </div>
   </div>
 </div>
@@ -43,9 +55,17 @@
     <div class="container-content">
       <div class="text-bold">OST KIT Alpha 2</div>
       <div class="status">Status: Complete</div>
+      <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+        <li class="list-inline-item">
+          <a href="https://medium.com/ostdotcom/announcing-the-winners-of-ost-kit-phase-ii-developer-challenge-beaa0dd0a656" target="_blank" title="OST Roadmap - Medium">
+            <span class="roadmap-medium-icon"></span>
+          </a>
+        </li>
+      </ul>
       <ul class="desc-lines">
         <li>Token Transfers via API</li>
       </ul>
+      <a href="https://dev.ost.com/docs/api_token.html" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
     </div>
   </div>
 </div>
@@ -61,6 +81,13 @@
     <div class="container-content">
       <div class="text-bold">OST KIT Alpha 3</div>
       <div class="status">Status: Complete</div>
+      <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+        <li class="list-inline-item">
+          <a href="https://medium.com/ostdotcom/introducing-ost-ledger-balance-apis-to-integrate-branded-token-balances-and-transaction-histories-2420736070bb" target="_blank" title="OST Roadmap - Medium">
+            <span class="roadmap-medium-icon"></span>
+          </a>
+        </li>
+      </ul>
       <ul class="desc-lines">
         <li>Wallet-lite Ledger & Balance APIs</li>
       </ul>
