--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -9,50 +9,20 @@
     <div class="container-content">
       <div class="text-bold">OpenST Protocol</div>
       <div class="status">Status: Complete</div>
-      <ul class="list-unstyled social-icons">
-        <li>
-          <a href="" target="_blank">
-            <svg class="social-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-telegram"></use>
-              </switch>
-            </svg>
+      <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+        <li class="list-inline-item">
+          <a href="https://www.youtube.com/watch?v=-SxJ8c1Xh_A" target="_blank" title="OST Roadmap - Youtube">
+            <span class="roadmap-youtube-icon"></span>
           </a>
         </li>
-        <li>
-          <a href="">
-            <svg class="social-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-twitter"></use>
-              </switch>
-            </svg>
+        <li class="list-inline-item">
+          <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" target="_blank" title="OST Roadmap - Medium">
+            <span class="roadmap-medium-icon"></span>
           </a>
         </li>
-        <li>
-          <a href="">
-            <svg class="social-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-              </switch>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <svg class="social-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-linkedin"></use>
-              </switch>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <svg class="social-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-fb"></use>
-              </switch>
-            </svg>
+        <li class="list-inline-item">
+          <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v0.9.0" target="_blank" title="OST Roadmap - Github">
+            <span class="roadmap-github-icon"></span>
           </a>
         </li>
       </ul>
@@ -61,10 +31,7 @@
         <li>0.9.0 Mint Branded Tokens</li>
         <li>0.9.1 Mainnet Developer Release</li>
       </ul>
-      <p class="collapse m-0" id="block-id">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi tempore asperiores et vel
-      </p>
-      <a href="" class="d-block more-desc" target="_blank">Read more</a>
+      <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" class="d-block more-desc" target="_blank" title="Read more">Read more</a>
     </div>
   </div>
 </div>
@@ -89,6 +56,13 @@
         <div class="container-content p-15-10">
           <div class="text-bold">OpenST Protocol</div>
           <div class="status">Status: Complete</div>
+          <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+            <li class="list-inline-item">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v.0.9.2" target="_blank" title="OST Roadmap - Github">
+                <span class="roadmap-github-icon"></span>
+              </a>
+            </li>
+          </ul>
           <ul class="desc-lines">
             <li>0.9.2  Token Transfers</li>
           </ul>
@@ -98,6 +72,13 @@
         <div class="container-content p-15-10">
           <div class="text-bold">OpenST Mosaic R&D</div>
           <div class="status">Status: Complete</div>
+          <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+            <li class="list-inline-item">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts" target="_blank" title="OST Roadmap - Github">
+                <span class="roadmap-github-icon"></span>
+              </a>
+            </li>
+          </ul>
           <ul class="desc-lines">
             <li>Asynchronous hetero-geneous composition of blockchains</li>
           </ul>
@@ -118,6 +99,13 @@
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol</div>
       <div class="status">Status: Complete</div>
+      <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+        <li class="list-inline-item">
+          <a href="https://github.com/OpenSTFoundation/mosaic-contracts" target="_blank" title="OST Roadmap - Github">
+            <span class="roadmap-github-icon"></span>
+          </a>
+        </li>
+      </ul>
       <ul class="desc-lines">
         <li>0.9.3  Cross-chain token-messaging</li>
       </ul>
@@ -127,6 +115,18 @@
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Mosaic Paper</div>
       <div class="status">Status: In Progress</div>
+      <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+        <li class="list-inline-item">
+          <a href="https://medium.com/ostdotcom/ost-contributes-openst-protocol-0-9-3-fully-decentralizing-the-openst-protocol-gateway-52719d9785b5" target="_blank" title="OST Roadmap - Medium">
+            <span class="roadmap-medium-icon"></span>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://github.com/OpenSTFoundation/mosaic.js" target="_blank" title="OST Roadmap - Github">
+            <span class="roadmap-github-icon"></span>
+          </a>
+        </li>
+      </ul>
       <ul class="desc-lines">
         <li>Scalable PoS Blockchains Finalized on Ethereum</li>
       </ul>
