--- a/app/views/web/ost/roadmap/_mobile.erb
+++ b/app/views/web/ost/roadmap/_mobile.erb
@@ -40,18 +40,24 @@
     </div>
   </div>
 
-  <section>
-    <div class="mobile_infrastructure">
-      <%= render :partial => "/web/ost/roadmap/mobile/infrastructure" %>
-    </div>
+  <div class="mobile_infrastructure">
+    <%= render :partial => "/web/ost/roadmap/mobile/infrastructure" %>
+  </div>
 
-    <div class="mobile_developer_tools">
-      <%= render :partial => "/web/ost/roadmap/mobile/developer_tools" %>
-    </div>
+  <div class="mobile_developer_tools">
+    <%= render :partial => "/web/ost/roadmap/mobile/developer_tools" %>
+  </div>
 
-    <div class="mobile_btx_exchange">
-      <%= render :partial => "/web/ost/roadmap/mobile/btx_exchange" %>
-    </div>
-  </section>
+  <div class="mobile_btx_exchange">
+    <%= render :partial => "/web/ost/roadmap/mobile/btx_exchange" %>
+  </div>
 
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12" style="background: linear-gradient(#f2f8f8, #ffffff);height: 100px">
+
+    </div>
+  </div>
 </div>
