--- a/app/views/web/ost/roadmap/_desktop.erb
+++ b/app/views/web/ost/roadmap/_desktop.erb
@@ -40,4 +40,12 @@
 
   </div>
 
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12" style="background: linear-gradient(#f2f8f8, #ffffff);height: 200px">
+
+      </div>
+    </div>
+  </div>
+
 </div>
