--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -145,6 +145,23 @@
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 0.9.4</div>
       <div class="status">Status: In Progress</div>
+      <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+        <li class="list-inline-item">
+          <a href="https://www.youtube.com/watch?v=V4yo-yvFNy8" target="_blank" title="OST Roadmap - Youtube">
+            <span class="roadmap-youtube-icon"></span>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://medium.com/ostdotcom/release-of-openst-protocol-v0-9-4-88c24a2618f6" target="_blank" title="OST Roadmap - Medium">
+            <span class="roadmap-medium-icon"></span>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="https://github.com/OpenSTFoundation/openst-contracts" target="_blank" title="OST Roadmap - Github">
+            <span class="roadmap-github-icon"></span>
+          </a>
+        </li>
+      </ul>
       <ul class="desc-lines">
         <li>Decentralized keys engine & token rules engine</li>
       </ul>
