--- a/app/assets/stylesheets/web/ost/roadmap/Index.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Index.scss
@@ -262,9 +262,9 @@ body{
   }
 }
 
-.q-elements{
-  visibility: hidden;
-}
+//.q-elements{
+//  visibility: hidden;
+//}
 
 .bg-h-border{
   &:after{
