--- a/app/assets/stylesheets/web/ost/roadmap/Animate.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Animate.scss
@@ -73,12 +73,12 @@
   90%{
     transform: translateY(0px);
     opacity: 0.8;
-    visibility: visible;
+//    visibility: visible;
   }
   100%{
     transform: translateY(0);
     opacity: 1;
-    visibility: visible;
+//    visibility: visible;
   }
 }
 
