--- a/app/assets/stylesheets/web/ost/roadmap/Animate.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Animate.scss
@@ -61,7 +61,7 @@
 
 /* Q elements Animation CSS */
 .q-elements{
-  visibility: visible;
+  visibility: hidden;
 }
 .qElementsToAnimate{
   animation: qElementsAnimate 2s forwards 0s ease-out;
