footer space for mobile and desktop

--- a/app/views/web/ost/roadmap/_mobile.erb
+++ b/app/views/web/ost/roadmap/_mobile.erb
@@ -54,7 +54,7 @@
 
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid d-md-none">
   <div class="row">
     <div class="col-12" style="background: linear-gradient(#f2f8f8, #ffffff);height: 100px">
 
