--- a/app/views/web/ost/roadmap/_desktop.erb
+++ b/app/views/web/ost/roadmap/_desktop.erb
@@ -40,7 +40,7 @@
 
   </div>
 
-  <div class="container-fluid">
+  <div class="container-fluid d-none d-md-block">
     <div class="row">
       <div class="col-12" style="background: linear-gradient(#f2f8f8, #ffffff);height: 200px">
 
