--- a/app/assets/stylesheets/web/ost/roadmap/Index.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Index.scss
@@ -12,10 +12,10 @@ body{
   .jumbotron-logo{
     width: 125px;
     height: 70px;
-    fill: #34445b;
+    fill: $blue-900;
   }
   .header{
-    color: #35445b;
+    color: $gulf-blue;
     font-weight: 600;
     letter-spacing: 0.5px;
   }
@@ -29,7 +29,7 @@ body{
     text-align: center;
     border-left: solid 0.5px rgba(89, 122, 132, 0.1);
     .year{
-      color: #438bad;
+      color: $cyan;
       font-size: 1.2rem;
       letter-spacing: 1.5px;
     }
@@ -55,7 +55,7 @@ body{
     }
     &.selected{
       .year{
-        color: #35445b;
+        color: $gulf-blue;
       }
       .selected-item{
         font-weight: 500;
@@ -67,7 +67,7 @@ body{
           left: 50%;
           position: absolute;
           transform: translateX(-50%);
-          border-bottom: 8px solid #35445b;
+          border-bottom: 8px solid $gulf-blue;
           border-left: 8px solid transparent;
           border-right: 8px solid transparent;
         }
@@ -88,13 +88,13 @@ body{
       letter-spacing: 0.5px;
       text-transform: uppercase;
       &.first{
-        color: #438bad;
+        color: $cyan;
       }
       &.second{
         color: #27b9d2;
       }
       &.third{
-        color: #e4b030;
+        color: $yellow-300;
       }
     }
     .desc{
@@ -106,21 +106,21 @@ body{
     }
   }
   .header{
-    color: #438bad;
+    color: $cyan;
     font-weight: 600;
     letter-spacing: 1px;
   }
   .desc{
     font-weight: 600;
     font-size: 1.5rem;
-    color: #35445b;
+    color: $gulf-blue;
     margin: 0;
   }
 }
 
 .quarters-year-row{
   .year{
-    color: #35445b;
+    color: $gulf-blue;
     font-size: 1.1rem;
     font-weight: 600;
     letter-spacing: 1px;
@@ -145,7 +145,7 @@ body{
 }
 
 .text-bold{
-  color: #35445b;
+  color: $gulf-blue;
   font-weight: 500;
   &.letter-space{
     letter-spacing: 1px;
@@ -189,7 +189,7 @@ body{
   margin: auto;
   position: absolute;
   border-radius: 50%;
-  background-color: #FFFFFF;
+  background-color: $white;
   box-shadow: 0 0 4px 0.5px rgba(0, 0, 0, 0.2);
   &:after{
     content: '';
@@ -205,7 +205,7 @@ body{
   }
   &:hover{
     &:after{
-      border-left: 10px solid #e4b030;
+      border-left: 10px solid $yellow-300;
     }
   }
 }
@@ -222,12 +222,12 @@ body{
 }
 
 .ost-nav{
-  background-color: #FFFFFF;
+  background-color: $white;
   .ost-brand{
     padding: 0.65rem 1rem;
   }
   #toggle-menu{
-    background-color: #FFFFFF;
+    background-color: $white;
   }
 }
 
@@ -248,7 +248,7 @@ body{
 .container-content{
   padding: 15px;
   width: 100%;
-  background-color: #fff;
+  background-color: $white;
   border-radius: 10px;
   &.p-15-10{
     padding: 15px 10px;
@@ -327,7 +327,7 @@ body{
   outline: none;
   border: .06em solid #d1dddd;
   border-radius: 5px;
-  background-color: #FFFFFF;
+  background-color: $white;
   transition: .5s all ease-in-out;
   input {
     display:none;
@@ -357,13 +357,13 @@ body{
       padding-right: 15px;
     }
     &.first{
-      color: #438bad;
+      color: $cyan;
     }
     &.second{
       color: #27b8d2;
     }
     &.third{
-      color: #e4b030;
+      color: $yellow-300;
     }
   }
   input:checked + label {
@@ -373,7 +373,7 @@ body{
     top: 0;
     width: 100%;
     transition: .5s color ease-in-out;
-    background-color: #FFFFFF;
+    background-color: $white;
 
     &:nth-child(2) {
       margin-top: 0;
@@ -388,12 +388,12 @@ body{
     top: 2em;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-top: 10px solid #34445b;
+    border-top: 10px solid $blue-900;
     transition: .5s all ease-in-out;
   }
   &.expanded {
     border: .06em solid #d1dddd;
-    background: #fff;
+    background: $white;
     border-radius: .4em;
     padding: 0;
     max-height: 16em;
@@ -417,8 +417,8 @@ body{
 }
 
 .quarters-year-header{
-  color: #35445b;
+  color: $gulf-blue;
   &:hover{
-    color: #35445b;
+    color: $gulf-blue;
   }
 }
