--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -37,6 +37,9 @@ $bismark: #4C6375;
 $powder-blue: #AFE1E3;
 $crimson: #E7003B;
 $cultured: #F4F8F9;
+$gulf-blue: #35445B;
+$regent-st-blue: #A5C7D7;
+$onahau: #BEEAF1;
 
 
 $grays: () !default;
