--- a/app/views/web/ost/roadmap/desktop/_2018-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q2.erb
@@ -25,10 +25,11 @@
             </a>
           </li>
         </ul>
+        <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/alpha-2-2018-q2@2x.png" class="img-fluid d-block my-3"/>
         <ul class="desc-lines">
           <li>Token Transfers via API</li>
         </ul>
-        <a href="https://dev.ost.com/docs/api_token.html" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
+        <a href="/challenges" class="d-block more-desc" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
