--- a/app/views/web/ost/roadmap/desktop/_2018-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q3.erb
@@ -55,14 +55,21 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
+            <a href="https://www.youtube.com/watch?v=S5CrTitqO2k" target="_blank" title="OST Roadmap - Youtube">
+              <span class="roadmap-youtube-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
             <a href="https://medium.com/ostdotcom/introducing-ost-ledger-balance-apis-to-integrate-branded-token-balances-and-transaction-histories-2420736070bb" target="_blank" title="OST Roadmap - Medium">
               <span class="roadmap-medium-icon"></span>
             </a>
           </li>
         </ul>
+        <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/alpha-3-2018-q3@2x.png" class="img-fluid d-block my-3"/>
         <ul class="desc-lines">
           <li>Wallet-lite Ledger & Balance APIs</li>
         </ul>
+        <a href="/challenges-2" class="d-block more-desc" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
